@@ -4268,6 +4268,15 @@ name|Exception
 name|e
 parameter_list|)
 block|{
+name|e
+operator|.
+name|printStackTrace
+argument_list|(
+name|System
+operator|.
+name|out
+argument_list|)
+expr_stmt|;
 name|fail
 argument_list|(
 literal|"writer failed to open on a crashed index"
@@ -31637,6 +31646,432 @@ name|tempDir
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|testFutureCommit
+specifier|public
+name|void
+name|testFutureCommit
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+operator|new
+name|MockRAMDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|w
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|()
+argument_list|)
+operator|.
+name|setIndexDeletionPolicy
+argument_list|(
+name|NoDeletionPolicy
+operator|.
+name|INSTANCE
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+comment|// commit to "first"
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|commitData
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|commitData
+operator|.
+name|put
+argument_list|(
+literal|"tag"
+argument_list|,
+literal|"first"
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|commit
+argument_list|(
+name|commitData
+argument_list|)
+expr_stmt|;
+comment|// commit to "second"
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|commitData
+operator|.
+name|put
+argument_list|(
+literal|"tag"
+argument_list|,
+literal|"second"
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|commit
+argument_list|(
+name|commitData
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// open "first" with IndexWriter
+name|IndexCommit
+name|commit
+init|=
+literal|null
+decl_stmt|;
+for|for
+control|(
+name|IndexCommit
+name|c
+range|:
+name|IndexReader
+operator|.
+name|listCommits
+argument_list|(
+name|dir
+argument_list|)
+control|)
+block|{
+if|if
+condition|(
+name|c
+operator|.
+name|getUserData
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"tag"
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+literal|"first"
+argument_list|)
+condition|)
+block|{
+name|commit
+operator|=
+name|c
+expr_stmt|;
+break|break;
+block|}
+block|}
+name|assertNotNull
+argument_list|(
+name|commit
+argument_list|)
+expr_stmt|;
+name|w
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|()
+argument_list|)
+operator|.
+name|setIndexDeletionPolicy
+argument_list|(
+name|NoDeletionPolicy
+operator|.
+name|INSTANCE
+argument_list|)
+operator|.
+name|setIndexCommit
+argument_list|(
+name|commit
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|w
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// commit IndexWriter to "third"
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|commitData
+operator|.
+name|put
+argument_list|(
+literal|"tag"
+argument_list|,
+literal|"third"
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|commit
+argument_list|(
+name|commitData
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// make sure "second" commit is still there
+name|commit
+operator|=
+literal|null
+expr_stmt|;
+for|for
+control|(
+name|IndexCommit
+name|c
+range|:
+name|IndexReader
+operator|.
+name|listCommits
+argument_list|(
+name|dir
+argument_list|)
+control|)
+block|{
+if|if
+condition|(
+name|c
+operator|.
+name|getUserData
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"tag"
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+literal|"second"
+argument_list|)
+condition|)
+block|{
+name|commit
+operator|=
+name|c
+expr_stmt|;
+break|break;
+block|}
+block|}
+name|assertNotNull
+argument_list|(
+name|commit
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|r
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|commit
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|r
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// open "second", w/ writeable IndexReader& commit
+name|r
+operator|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|commit
+argument_list|,
+name|NoDeletionPolicy
+operator|.
+name|INSTANCE
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|r
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|deleteDocument
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|deleteDocument
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|commitData
+operator|.
+name|put
+argument_list|(
+literal|"tag"
+argument_list|,
+literal|"fourth"
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|commit
+argument_list|(
+name|commitData
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// make sure "third" commit is still there
+name|commit
+operator|=
+literal|null
+expr_stmt|;
+for|for
+control|(
+name|IndexCommit
+name|c
+range|:
+name|IndexReader
+operator|.
+name|listCommits
+argument_list|(
+name|dir
+argument_list|)
+control|)
+block|{
+if|if
+condition|(
+name|c
+operator|.
+name|getUserData
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"tag"
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+literal|"third"
+argument_list|)
+condition|)
+block|{
+name|commit
+operator|=
+name|c
+expr_stmt|;
+break|break;
+block|}
+block|}
+name|assertNotNull
+argument_list|(
+name|commit
+argument_list|)
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 end_class
